treemachine bootstrapping